--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "resme",
-  "version": "0.1.0",
+  "description": "",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "turbo": "next dev --turbo",
+    "format": "prettier --write .",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,14 +17,16 @@
     "next": "14.0.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
