--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-  "semi": false,
   "trailingComma": "es5",
-  "singleQuote": true,
+  "semi": true,
   "tabWidth": 2,
-  "useTabs": false
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
