--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,28 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
-  "plugins": ["import"],
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "next/core-web-vitals",
+    "turbo",
+    "prettier",
+    "plugin:tailwindcss/recommended"
+  ],
+  "plugins": [
+    "import",
+    "tailwindcss"
+  ],
   "rules": {
+    "no-unused-vars": "warn",
+    "no-console": "warn",
+    "@next/next/no-html-link-for-pages": "off",
+    "tailwindcss/no-custom-classname": "off",
+    "tailwindcss/classnames-order": "error",
+    "react/display-name": [
+      "off",
+      {
+        "ignoreTranspilerName": true
+      }
+    ],
     "sort-imports": [
       "error",
       {
@@ -12,7 +33,17 @@
     "import/order": [
       "error",
       {
-        "groups": [["external", "builtin"], "internal", ["sibling"], "index"],
+        "groups": [
+          [
+            "external",
+            "builtin"
+          ],
+          "internal",
+          [
+            "sibling"
+          ],
+          "index"
+        ],
         "pathGroups": [
           {
             "pattern": "react",
@@ -24,12 +55,33 @@
             "group": "internal"
           }
         ],
-        "pathGroupsExcludedImportTypes": ["internal", "react"],
+        "pathGroupsExcludedImportTypes": [
+          "internal",
+          "react"
+        ],
         "newlines-between": "always",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
         }
+      }
+    ]
+  },
+  "settings": {
+    "tailwindcss": {
+      "callees": [
+        "cn",
+        "cva"
+      ],
+      "config": "tailwind.config.ts"
+    },
+    "overrides": [
+      {
+        "files": [
+          "*.ts",
+          "*.tsx"
+        ],
+        "parser": "@typescript-eslint/parser"
       }
     ]
   }
