--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-starter",
+  "name": "resme",
   "version": "1.0.0",
   "scripts": {
     "dev": "prisma generate && next dev",
